--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/app.ts"
-
   },
   "repository": {
     "type": "git",
@@ -25,19 +24,30 @@
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/nodemon": "^1.19.2",
+    "@types/sharp": "^0.32.0",
+    "@types/socket.io": "^3.0.2",
+    "@types/validator": "^13.11.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.40.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "sharp": "^0.32.5",
+    "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "validator": "^13.11.0"
   }
 }
