--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.9",
     "@types/nodemon": "^1.19.2",
     "@types/sharp": "^0.32.0",
     "@types/socket.io": "^3.0.2",
@@ -37,6 +38,7 @@
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
