--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/validator": "^13.11.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
+    "concurrently": "^8.2.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
