--- a/package.json
+++ b/package.json
@@ -19,39 +19,57 @@
   "homepage": "https://github.com/yash11pratap/GraphQl#readme",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/debug": "^4.1.8",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.197",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.9",
     "@types/nodemon": "^1.19.2",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/pino": "^7.0.5",
     "@types/sharp": "^0.32.0",
     "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^9.0.2",
     "@types/validator": "^13.11.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
+    "compression": "^1.7.4",
     "concurrently": "^8.2.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.9.0",
+    "helmet": "^7.0.0",
+    "i": "^0.3.7",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
+    "npm": "^9.8.1",
+    "passport-jwt": "^4.0.1",
+    "pino": "^8.15.0",
     "sharp": "^0.32.5",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "uuid": "^9.0.0",
     "validator": "^13.11.0"
   }
 }
