--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.197",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.9",
     "@types/nodemon": "^1.19.2",
