--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.9",
     "@types/nodemon": "^1.19.2",
+    "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
     "@types/pino": "^7.0.5",
     "@types/sharp": "^0.32.0",
@@ -53,6 +54,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
     "i": "^0.3.7",
@@ -60,10 +62,12 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mongoose": "^7.4.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "npm": "^9.8.1",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pino": "^8.15.0",
     "sharp": "^0.32.5",
